<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Love &amp; Hate</string>
    <string name="love_hate_chosen">Love &amp; hate chosen</string>
    <string name="plain_text_love_hate_chosen"></string>
    <string name="action_settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="love_hate">Love &amp; hate</string>
    <string name="close">Close</string>

    <string-array name="loveHateElements">
        <item>Windows</item>
        <item>IPhone</item>
        <item>Windows Phone</item>
        <item>Android</item>
        <item>Blackberry</item>
        <item>Ubuntu</item>
        <item>Windows 7</item>
        <item>Mac Os X</item>
        <item>Windows</item>
        <item>IPhone</item>
        <item>WindowsPhone</item>
        <item>Android</item>
        <item>Blackberry</item>
        <item>Ubuntu</item>
        <item>Windows 7</item>
        <item>Mac Os X</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_run_sound">RunSound</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="cancelar">cancelar</string>
    <string name="guardar">guardar</string>
    <string name="label_id">id</string>
    <string name="hipoteca_crear_titulo">Añadir</string>
    <string name="label_nombre_artista">Odio o Amor</string>
    <string name="crear">Nuevo Item</string>
    <string name="title_activity_love">Love</string>
    <string name="title_activity_hate">Hate</string>

</resources>