<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lovehate.loveandhate.Settings"
    android:background="#0e2f44">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:id="@+id/sound"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/loveHate"
        android:layout_alignEnd="@+id/loveHate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_hate"
        android:id="@+id/loveHate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/close"
        android:layout_below="@+id/sound"
        android:layout_alignStart="@+id/sound"
        android:layout_marginTop="57dp"
        android:layout_alignEnd="@+id/sound" />
</RelativeLayout>
